# Real-Time-Fraud-Detection-Pipeline

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  realtime_data_simulation.py  requirements.txt  run_train.py  sweep.yaml
.dvc/: config
.github/workflows/: deploy.yml
configs/: config.yaml
data/: real_time_simulated.csv
data/processed/: X_test.csv.dvc  X_train.csv.dvc  Y_test.csv.dvc  Y_train.csv.dvc
lambda/: Dockerfile
lambda/app/: fraud_model.onnx  lambda_handler.py  requirements.txt
models/: .gitignore  fraud_model.onnx.dvc  fraud_model_schema.json
notebooks/: Fraud_Detection.ipynb
results/: drift_report.html
src/: datamodule.py  model.py  preprocessing.py  train.py
