[project]
name = "real-time-fraud-detection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.60.1",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.12.4",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "pandas>=2.3.0",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "wandb>=0.20.1",
]
